--- a/index.html
+++ b/index.html
@@ -5,23 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="main.js"></script>
 </head>
 <body class="paper" style="--texture-color: rgb(255, 245, 219);">
     <header class="leather" style="--texture-color: #344f33; --border-color: #d4d784">
         <h1>
-            Математека
+            Math
         </h1>
         <div class="auth">
-            <a href="" class="link-button" style="--button-color: var(--second-color);">
+            <a href="register.html" class="link-button" style="--button-color: var(--second-color);">
                 Регистрация
             </a>
-            <a href="" class="link-button" style="--button-color: var(--accent-color);">
+            <a href="login.html" class="link-button" style="--button-color: var(--accent-color);">
                 Вход
             </a>
         </div>
     </header>
     <main>
-        <section style="--texture-color: rgb(255, 245, 219);">
+        <section class="reg-only restricted" style="--texture-color: rgb(255, 245, 219);">
             <figure>
                 <span>
                     <h1>
@@ -41,7 +42,7 @@
             </figure>
             <img src="info.png" alt="">
         </section>
-        <section style="--texture-color: rgb(255, 245, 219);">
+        <section class="reg-only" style="--texture-color: rgb(255, 245, 219);">
             <figure>
                 <span>
                     <h1>
@@ -65,11 +66,11 @@
             <figure>
                 <span>
                     <h1>
-                        <a href="">
+                        <a href="calculators.html">
                             Калькуляторы
                         </a>
                     </h1>
-                    <a href="" class="link-button" style="--button-color: var(--accent-color);">
+                    <a href="calculators.html" class="link-button" style="--button-color: var(--accent-color);">
                         Перейти →
                     </a>
                 </span>
