--- a/calculators.html
+++ b/calculators.html
@@ -10,7 +10,9 @@
 <body class="paper" style="--texture-color: rgb(255, 245, 219);">
     <header class="leather" style="--texture-color: #344f33; --border-color: #d4d784">
         <h1>
-            Math
+            <a href="index.html">
+                Math
+            </a>
         </h1>
         <div class="auth">
             <a href="register.html" class="link-button" style="--button-color: var(--second-color);">
@@ -22,21 +24,121 @@
         </div>
     </header>
     <main>
-        <section class="reg-only restricted" style="--texture-color: rgb(255, 245, 219);">
+        <section style="--texture-color: rgb(255, 245, 219);">
             <figure>
                 <span>
                     <h1>
-                        <a href="">
-                            Информация по Темам
+                        <a href="https://www.mathway.com/ru/Precalculus">
+                            Mathway
                         </a>
                     </h1>
-                    <a href="" class="link-button" style="--button-color: var(--accent-color);">
+                    <a href="https://www.mathway.com/ru/Precalculus" class="link-button" style="--button-color: var(--accent-color);">
                         Перейти →
                     </a>
                 </span>
                 <figcaption>
                     <p>
-                        Изучите фундаментальные концепции и теории. В этом разделе собраны подробные объяснения ключевых тем, необходимых для глубокого понимания предмета. Вы найдете структурированную информацию, примеры и основные принципы
+                        Бесплатное решение математических задач с поэтапными пояснениями поможет с домашними заданиями по алгебре.
+                    </p>
+                </figcaption>
+            </figure>
+            <img src="info.png" alt="">
+        </section>
+        <section style="--texture-color: rgb(255, 245, 219);">
+            <figure>
+                <span>
+                    <h1>
+                        <a href="https://www.desmos.com/calculator?lang=ru">
+                            Desmos
+                        </a>
+                    </h1>
+                    <a href="https://www.desmos.com/calculator?lang=ru" class="link-button" style="--button-color: var(--accent-color);">
+                        Перейти →
+                    </a>
+                </span>
+                <figcaption>
+                    <p>
+                        Исследуйте математику с помощью красивого и бесплатного онлайн-калькулятора. Стройте графики функций, наносите точки, визуализируйте алгебраические решения.
+                    </p>
+                </figcaption>
+            </figure>
+            <img src="info.png" alt="">
+        </section>
+        <section style="--texture-color: rgb(255, 245, 219);">
+            <figure>
+                <span>
+                    <h1>
+                        <a href="https://ru.symbolab.com/solver/inequalities-calculator">
+                            Symbolab
+                        </a>
+                    </h1>
+                    <a href="https://ru.symbolab.com/solver/inequalities-calculator" class="link-button" style="--button-color: var(--accent-color);">
+                        Перейти →
+                    </a>
+                </span>
+                <figcaption>
+                    <p>
+                        Бесплатный калькулятор для решения неравенств - поэтапное решение линейных неравенств, квадратных неравенств и неравенств, содержащих абсолютную величину.
+                    </p>
+                </figcaption>
+            </figure>
+            <img src="info.png" alt="">
+        </section>
+        <section style="--texture-color: rgb(255, 245, 219);">
+            <figure>
+                <span>
+                    <h1>
+                        <a href="https://skysmart.ru/articles/calculators/onlajn-kalkulyator-veroyatnosti">
+                            Skysmart
+                        </a>
+                    </h1>
+                    <a href="https://skysmart.ru/articles/calculators/onlajn-kalkulyator-veroyatnosti" class="link-button" style="--button-color: var(--accent-color);">
+                        Перейти →
+                    </a>
+                </span>
+                <figcaption>
+                    <p>
+                        Онлайн-калькулятор для расчёта вероятности события.
+                    </p>
+                </figcaption>
+            </figure>
+            <img src="info.png" alt="">
+        </section>
+        <section style="--texture-color: rgb(255, 245, 219);">
+            <figure>
+                <span>
+                    <h1>
+                        <a href="https://mathdf.com/equ/ru/">
+                            Mathdf
+                        </a>
+                    </h1>
+                    <a href="https://mathdf.com/equ/ru/" class="link-button" style="--button-color: var(--accent-color);">
+                        Перейти →
+                    </a>
+                </span>
+                <figcaption>
+                    <p>
+                        Калькулятор решает уравнения: линейные, квадратные, кубические, возвратные, 4-й степени, тригонометрические и гиперболические.
+                    </p>
+                </figcaption>
+            </figure>
+            <img src="info.png" alt="">
+        </section>
+        <section style="--texture-color: rgb(255, 245, 219);">
+            <figure>
+                <span>
+                    <h1>
+                        <a href="https://geleot.ru/education/math/geometry/calc">
+                            Geleot
+                        </a>
+                    </h1>
+                    <a href="https://geleot.ru/education/math/geometry/calc" class="link-button" style="--button-color: var(--accent-color);">
+                        Перейти →
+                    </a>
+                </span>
+                <figcaption>
+                    <p>
+                        В данном разделе можно рассчитать стороны, углы, площади, периметры и объемы всех геометрических фигур.
                     </p>
                 </figcaption>
             </figure>
