--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body class="paper" style="--texture-color: rgb(255, 245, 219);">
     <header class="leather" style="--texture-color: #344f33; --border-color: #d4d784">
         <h1>
-            Math
+            <a href="index.html">
+                Math
+            </a>
         </h1>
         <div class="auth">
             <a href="register.html" class="link-button" style="--button-color: var(--second-color);">
@@ -86,11 +88,11 @@
             <figure>
                 <span>
                     <h1>
-                        <a href="">
+                        <a href="videos.html">
                             Видеоуроки
                         </a>
                     </h1>
-                    <a href="" class="link-button" style="--button-color: var(--accent-color);">
+                    <a href="videos.html" class="link-button" style="--button-color: var(--accent-color);">
                         Перейти →
                     </a>
                 </span>
