--- a/register.html
+++ b/register.html
@@ -10,7 +10,9 @@
 <body class="paper" style="--texture-color: rgb(255, 245, 219);">
     <header class="leather" style="--texture-color: #344f33; --border-color: #d4d784">
         <h1>
-            Math
+            <a href="index.html">
+                Math
+            </a>
         </h1>
         <div class="auth">
         </div>
