--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <figure>
                 <span>
                     <h1>
-                        <a href="">
+                        <a href="info.html">
                             Информация по Темам
                         </a>
                     </h1>
-                    <a href="" class="link-button" style="--button-color: var(--accent-color);">
+                    <a href="info.html" class="link-button" style="--button-color: var(--accent-color);">
                         Перейти →
                     </a>
                 </span>
