--- a/videos.html
+++ b/videos.html
@@ -34,11 +34,11 @@
                 <figure>
                     <span>
                         <h1>
-                            <a href="https://www.mathway.com/ru/Precalculus">
+                            <a href="https://www.youtube.com/watch?v=6yZ3rYs95fg&list=PLCRqj4jDCIYkJy8_eBhNDTLc23OBIT7Pq&ab_channel=MEKTE%D0%9FOnLineMATEMAT%D0%98KA">
                                 5 класс
                             </a>
                         </h1>
-                        <a href="https://www.mathway.com/ru/Precalculus" class="link-button" style="--button-color: var(--accent-color);">
+                        <a href="https://www.youtube.com/watch?v=6yZ3rYs95fg&list=PLCRqj4jDCIYkJy8_eBhNDTLc23OBIT7Pq&ab_channel=MEKTE%D0%9FOnLineMATEMAT%D0%98KA" class="link-button" style="--button-color: var(--accent-color);">
                             Перейти →
                         </a>
                     </span>
@@ -49,16 +49,91 @@
                 <figure>
                     <span>
                         <h1>
-                            <a href="https://www.mathway.com/ru/Precalculus">
-                                5 класс
+                            <a href="https://www.youtube.com/watch?v=zHdsvE71sNk&list=PLCRqj4jDCIYkfguwXelV8j2PNZwHuV4uW&ab_channel=MEKTE%D0%9FOnLineMATEMAT%D0%98KA">
+                                6 класс
                             </a>
                         </h1>
-                        <a href="https://www.mathway.com/ru/Precalculus" class="link-button" style="--button-color: var(--accent-color);">
+                        <a href="https://www.youtube.com/watch?v=zHdsvE71sNk&list=PLCRqj4jDCIYkfguwXelV8j2PNZwHuV4uW&ab_channel=MEKTE%D0%9FOnLineMATEMAT%D0%98KA" class="link-button" style="--button-color: var(--accent-color);">
                             Перейти →
                         </a>
                     </span>
                 </figure>
-                <iframe src="https://www.youtube.com/embed/6yZ3rYs95fg?si=5XSgMDoAcPMJhr0P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/zHdsvE71sNk?si=jldyTmEyJXFapPKH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </section>
+            <section style="--texture-color: rgb(255, 245, 219);">
+                <figure>
+                    <span>
+                        <h1>
+                            <a href="https://www.youtube.com/watch?v=rz19lLmnZ_4&list=PLCRqj4jDCIYmUtgQCGy3l5GGYbiDBR3p-&ab_channel=MEKTE%D0%9FOnLineMATEMAT%D0%98KA">
+                                7 класс
+                            </a>
+                        </h1>
+                        <a href="https://www.youtube.com/watch?v=rz19lLmnZ_4&list=PLCRqj4jDCIYmUtgQCGy3l5GGYbiDBR3p-&ab_channel=MEKTE%D0%9FOnLineMATEMAT%D0%98KA" class="link-button" style="--button-color: var(--accent-color);">
+                            Перейти →
+                        </a>
+                    </span>
+                </figure>
+                <iframe src="https://www.youtube.com/embed/rz19lLmnZ_4?si=aOd78y_NJSEVheFe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </section>
+            <section style="--texture-color: rgb(255, 245, 219);">
+                <figure>
+                    <span>
+                        <h1>
+                            <a href="https://www.youtube.com/watch?v=S2r57OCeZq0&list=PLCRqj4jDCIYkk9CMV6wBQR16eHz_SRU1j&ab_channel=MEKTE%D0%9FOnLineMATEMAT%D0%98KA">
+                                8 класс
+                            </a>
+                        </h1>
+                        <a href="https://www.youtube.com/watch?v=S2r57OCeZq0&list=PLCRqj4jDCIYkk9CMV6wBQR16eHz_SRU1j&ab_channel=MEKTE%D0%9FOnLineMATEMAT%D0%98KA" class="link-button" style="--button-color: var(--accent-color);">
+                            Перейти →
+                        </a>
+                    </span>
+                </figure>
+                <iframe src="https://www.youtube.com/embed/S2r57OCeZq0?si=I1GOR-VDPtZz3lE3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </section>
+            <section style="--texture-color: rgb(255, 245, 219);">
+                <figure>
+                    <span>
+                        <h1>
+                            <a href="https://www.youtube.com/watch?v=uRqiPq8ccKQ&list=PLCRqj4jDCIYl7ZP0JefXdLcXcEIh8LY5m&ab_channel=MEKTE%D0%9FOnLineMATEMAT%D0%98KA">
+                                9 класс
+                            </a>
+                        </h1>
+                        <a href="https://www.youtube.com/watch?v=uRqiPq8ccKQ&list=PLCRqj4jDCIYl7ZP0JefXdLcXcEIh8LY5m&ab_channel=MEKTE%D0%9FOnLineMATEMAT%D0%98KA" class="link-button" style="--button-color: var(--accent-color);">
+                            Перейти →
+                        </a>
+                    </span>
+                </figure>
+                <iframe src="https://www.youtube.com/embed/uRqiPq8ccKQ?si=EFXmf0HxqfUD7vt8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </section>
+            <section style="--texture-color: rgb(255, 245, 219);">
+                <figure>
+                    <span>
+                        <h1>
+                            <a href="https://www.youtube.com/watch?v=5bnUIkZD3Z0&list=PLCRqj4jDCIYlaZBTUCrK2xq65quwfPEXE&ab_channel=MEKTE%D0%9FOnLineMATEMAT%D0%98KA">
+                                10 класс
+                            </a>
+                        </h1>
+                        <a href="https://www.youtube.com/watch?v=5bnUIkZD3Z0&list=PLCRqj4jDCIYlaZBTUCrK2xq65quwfPEXE&ab_channel=MEKTE%D0%9FOnLineMATEMAT%D0%98KA" class="link-button" style="--button-color: var(--accent-color);">
+                            Перейти →
+                        </a>
+                    </span>
+                </figure>
+                <iframe src="https://www.youtube.com/embed/5bnUIkZD3Z0?si=oss3kbiwuK6HoZDh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </section>
+            <section style="--texture-color: rgb(255, 245, 219);">
+                <figure>
+                    <span>
+                        <h1>
+                            <a href="https://www.youtube.com/watch?v=_yqDP_EtM50&list=PLCRqj4jDCIYkL1lREiEg-APcjYbvfqCdn&ab_channel=MEKTE%D0%9FOnLineMATEMAT%D0%98KA">
+                                11 класс
+                            </a>
+                        </h1>
+                        <a href="https://www.youtube.com/watch?v=_yqDP_EtM50&list=PLCRqj4jDCIYkL1lREiEg-APcjYbvfqCdn&ab_channel=MEKTE%D0%9FOnLineMATEMAT%D0%98KA" class="link-button" style="--button-color: var(--accent-color);">
+                            Перейти →
+                        </a>
+                    </span>
+                </figure>
+                <iframe src="https://www.youtube.com/embed/_yqDP_EtM50?si=FMYsYO9NZgdqHrkW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </section>
         </div>
         
