--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </figure>
             <img src="info.png" alt="">
         </section>
-        <section class="reg-only" style="--texture-color: rgb(255, 245, 219);">
+        <section class="reg-only" style="display:none; --texture-color: rgb(255, 245, 219);">
             <figure>
                 <span>
                     <h1>
